--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "detect-passive-events": "^1.0.4",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.3",
     "vue-router": "^3.0.1",
